--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -1,11 +1,23 @@
-.main{
+.main {
     margin: 30px;
     background-color: white;
 }
-.bg_body{
+
+.bg_body {
     background-color: #efefef;
 }
-.btn_publish{
+
+.btn_publish {
     float: right;
     margin-bottom: 15px;
+}
+
+.media-object {
+    width: 38px;
+    height: 38px;
+}
+.text-desc{
+    font-size: 12px;
+    font-weight: normal;
+    color: #999;
 }
