--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -17,7 +17,7 @@
                     data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                 <span class="sr-only">码农社区</span>
             </button>
-            <a class="navbar-brand" href="#">码农社区</a>
+            <a class="navbar-brand" href="/">码农社区</a>
         </div>
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -69,7 +69,12 @@
                 </div>
                 <div class="container-fluid main">
                     <div class="row">
-                        <div class="alert alert-danger col-lg-9 col-md-12 col-sm-12 col-xs-12" th:if="${session.error!=null}" th:text="${session.error}"></div>
+                        <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
+                            <div class="alert alert-danger col-lg-12 col-md-12 col-sm-12 col-xs-12"
+                                 th:if="${session.error!=null}"
+                                 th:text="${session.error}">
+                            </div>
+                        </div>
                         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
                             <button type="submit" class="btn btn-success btn_publish">发布</button>
                         </div>
