个人发布问题列表实现

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -1,13 +1,13 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>码农社区</title>
+    <title th:text="${sectionName}"></title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="css/community.css">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="/css/community.css">
     <script src="/js/jquery-3.4.1.js"></script>
-    <script src="js/bootstrap.min.js" type="application/javascript"></script>
+    <script src="/js/bootstrap.min.js" type="application/javascript"></script>
 
 </head>
 <body>
@@ -16,10 +16,11 @@
 
 <div class="container-fluid main">
     <div class="row">
+        <!--左边-->
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
-            <h2><span class="glyphicon glyphicon-list" aria-hidden="true"></span> 发现</h2>
+            <h2><span th:text="${sectionName}"></span></h2>
             <hr>
-            <div class="media" th:each="question : ${paginationDTO.questions}">
+            <div class="media" th:each="question : ${paginationById.questions}">
                 <div class="media-left">
                     <a href="#">
                         <img class="media-object img-rounded" th:src="${question.user.avatarUrl}" alt="头像">
@@ -35,34 +36,41 @@
             </div>
             <nav aria-label="Page navigation">
                 <ul class="pagination">
-                    <li th:if="${paginationDTO.showFirsPage}">
-                        <a href="/?page=1" aria-label="Previous">
+                    <li th:if="${paginationById.showFirsPage}">
+                        <a th:href="@{'/profile/'+${section}(page=${1})}" aria-label="Previous">
                             <span aria-hidden="true">&lt;&lt;</span>
                         </a>
                     </li>
-                    <li th:if="${paginationDTO.showPrevious}">
-                        <a th:href="@{/(page=${paginationDTO.page -1})}" aria-label="Previous">
+                    <li th:if="${paginationById.showPrevious}">
+                        <a th:href="@{'/profile/'+${section}(page=${paginationById.page -1})}" aria-label="Previous">
                             <span aria-hidden="true">&lt;</span>
                         </a>
                     </li>
-                    <li th:each="page : ${paginationDTO.pages}" th:class="${paginationDTO.page==page}?'active':''">
-                        <a th:href="@{/(page=${page})}" th:text="${page}"></a>
+                    <li th:each="page : ${paginationById.pages}" th:class="${paginationById.page==page}?'active':''">
+                        <a th:href="@{'/profile/'+${section}(page=${page})}" th:text="${page}"></a>
                     </li>
-                    <li th:if="${paginationDTO.showNext}">
-                        <a th:href="@{/(page=${paginationDTO.page +1})}" aria-label="Previous">
+                    <li th:if="${paginationById.showNext}">
+                        <a th:href="@{'/profile/'+${section}(page=${paginationById.page +1})}" aria-label="Previous">
                             <span aria-hidden="true">&gt;</span>
                         </a>
                     </li>
-                    <li th:if="${paginationDTO.showEndPage}">
-                        <a th:href="@{/(page=${paginationDTO.totaPage})}" aria-label="Previous">
+                    <li th:if="${paginationById.showEndPage}">
+                        <a th:href="@{'/profile/'+${section}(page=${paginationById.totaPage})}" aria-label="Previous">
                             <span aria-hidden="true">&gt;&gt;</span>
                         </a>
                     </li>
                 </ul>
             </nav>
         </div>
+        <!--右边-->
+
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-            <H3>热门话题</H3>
+            <div class="list-group">
+                <a href="/profile/questions"
+                   th:class="${section=='questions'}?'list-group-item active':'list-group-item'">我的问题</a>
+                <a href="/profile/replies" th:class="${section=='replies'}?'list-group-item active':'list-group-item'">我的回复
+                    <span class="badge">14</span></a>
+            </div>
         </div>
     </div>
 </div>
