完成编辑修改功能

--- a/src/main/resources/templates/navlgation.html
+++ b/src/main/resources/templates/navlgation.html
@@ -32,7 +32,7 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a href="/profile/questions">我的问题</a></li>
-                            <li><a href="#">退出登录</a></li>
+                            <li><a href="/loginOut">退出登录</a></li>
                         </ul>
                     </li>
                     <li class="dropdown" th:if="${session.user==null}"><a
