--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -34,7 +34,7 @@
             </div>
             <hr  class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <!--编辑-->
-            <a href="#" ><span class="glyphicon glyphicon-edit community-menu" aria-hidden="true">编辑</span></a>
+            <a th:href="@{'/publish/'+${question.id}}" ><span class="glyphicon glyphicon-edit community-menu" aria-hidden="true" th:if="${session.user!=null && question.creator==session.user.id}">编辑</span></a>
         </div>
         <!--右边-->
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
